# clips_vendor

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  defglobal_callback.patch.in  fact_callback.patch.in  package.xml
buildsys/: CMakeLists.txt
buildsys/branches/64x/: CMakeLists.txt
buildsys/core/: CMakeLists.txt
patches/: clips642.cmake.patch
