<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clips_vendor</name>
  <version>6.4.2</version>
  <description>Vendor package for the CLIPS rule based production system</description>
  <maintainer email="viehmann@kbsg.rwth-aachen.de">Tarik Viehmann</maintainer>
  <license>Public Domain</license>
  <depend>ament_cmake_vendor_package</depend>
  <depend condition="$BUILD_WITH_JAVA_EXAMPLES != ''"> java</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
